# IRacingSetupsClient

./: Makefile  README.md  config.development.yaml  output.properties  prompt.txt  pyproject.toml
iracingsetups_client/: app.py  config.py  iracing_pb2.py  iracing_pb2_grpc.py  json_to_properties.py  tracking_client.py
iracingsetups_client/iracing/: helpers.py  messages.py
proto/iracingsetups_client/: iracing.proto
sample_data/: sample.json
tests/: test_json_to_properties.py
