[tool.poetry]
name = "iracingsetups_client"
version = "0.1.0"
description = ""
authors = ["Leon Weemen <weemen@leonweemen.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
configloader = "^1.0.1"
pyyaml = "^6.0.1"
pyirsdk = "^1.3.5"
grpcio-tools = "^1.65.1"
requests = "^2.31.0"

[tool.poetry.scripts]
app = "iracingsetups_client.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
