[tool.poetry]
name = "iracingsetups_client"
version = "0.1.0"
description = ""
authors = ["Leon Weemen <weemen@leonweemen.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
configloader = "^1.0.1"
pyyaml = "^6.0.1"
pyirsdk = "^1.3.5"
grpcio-tools = "^1.65.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
packaging = "^23.0"

[tool.poetry.scripts]
app = "iracingsetups_client.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
